--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ function showHint(str) {
       <div class="nav-up"><img src="images/apps-icon.png"></img></div>
       <div class="nav-up">Images</div>      
       <div class="nav-up">Gmail</div>  
-      <div class="nav-up">+Nnamso</div>
+      <div class="nav-up">+Me</div>
     </nav>
   </div>
 
@@ -159,9 +159,9 @@ function showHint(str) {
     <form>
 
 
-<input type="text" onkeyup="showHint(this.value)">
+<input type="text"  onkeyup="showHint(this.value)">
 
-<p>Suggestions: <span id="txtHint"></span></p>
+<p> <span id="txtHint"></span></p>
 
 
 
