change logo url

--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@ function showHint(str) {
   </div>
 
   <div class="main">
-    <img src="https://www.google.com/images/srpr/logo11w.png">
+    <img src="https://www.google.com.ng/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
     </br>
     
     <form>
 
 
-<input type="text"  onkeyup="showHint(this.value)">
+<input type="text" placeholder="Search for a word" onkeyup="showHint(this.value)">
 
 <p> <span id="txtHint"></span></p>
 
