gethint added json to the array

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@ function showHint(str) {
 
 
 <input type="text" placeholder="Search Google or type URL" onkeyup="showHint(this.value)">
-
-<p> <span id="txtHint"></span></p>
+<br>
+<span id="txtHint"></span>
 
 
 
